--- a/lava-app/src/app/app.component.html
+++ b/lava-app/src/app/app.component.html
@@ -517,3 +517,8 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+{{description}}
+<br>
+{{today}}
+<br>
+magicNumber: {{magicNumber}}
